Lotds of changes with fzf

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,11 @@
   "bashIde.explainshellEndpoint": "https://explainshell.com/",
   "bashIde.shellcheckPath": "/opt/homebrew/bin/shellcheck",
   "shell-syntax.defaultShell": "zsh",
-  "shellformat.useEditorConfig": true
+  "shellformat.useEditorConfig": true,
+  "editor.defaultFormatter": "Shunqian.prettier-plus",
+  "workbench.productIconTheme": "fluent-icons",
+  "workbench.colorTheme": "SynthWave '84",
+  "workbench.iconTheme": "eq-material-theme-icons",
+  "workbench.preferredDarkColorTheme": "Andromeda Colorizer",
+  "synthwave84.brightness": 0.6
 }
