--- a/configs/eza.conf
+++ b/configs/eza.conf
@@ -1,14 +1,28 @@
 #! /usr/bin/env zsh
-EZA_DEFAULT_FLAGS=" \
---all \
+# vim: set filetype=zsh syntax=zsh
+# vim: set foldmethod=marker foldlevel=0
+# coding: utf-8
+
+# Specify the default EZA options
+EZA_DEFAULT_FLAGS=\
 --group-directories-first \
 --time-style=long-iso \
 --sort=name \
---icons=always"
+--icons=always \
+--color=always
 
-# -- aliases --
-alias ll="\
-eza "${EZA_DEFAULT_FLAGS}" \
+# Apply the default EZA options
+alias eza=eza ${EZA_DEFAULT_FLAGS}
+
+ls() {
+  [[ "$#" -eq 0 ]] &&\
+    alias ls=eza --oneline $(realpath) ||\
+    alias ls=eza --oneline;
+}
+
+# The LS Ultimate command
+alias ll=eza \
+--all \
 --binary \
 --classify \
 --context \
@@ -17,9 +31,22 @@ eza "${EZA_DEFAULT_FLAGS}" \
 --git-repos \
 --header \
 --long \
---modified \
-"
+--modified
 
-alias ls="eza "${EZA_DEFAULT_FLAGS}" --across"
-alias l="ls"
-alias tree="ll --tree"
+# Show Only Directories
+ld=’eza -lD’
+
+# Show Only Files
+lf=’eza -lf | grep -v /’
+
+# Show Only Hidden Files
+lh=’eza -dl .*’
+
+# Show Only Hidden Directories
+ll=’eza -al’
+
+# Show Only Symbolic Links
+ls=’eza -alf --sort=size | grep -v /’
+
+# Show Only Regular Files
+lt=’eza -al --sort=modified’
