--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ configs/zsh/.zsh_history
 .zsh_history
 .zcompdum*
 **/.zcompdump
+.vscode
+configs/zsh/.zsh_sessions
+configs/zsh/.zsh_sessions/037B4262-8135-4B38-BEEB-9FEEB9819F5E.session
+configs/zsh/.zsh_sessions/_expiration_check_timestamp
+.vscode/settings.json
