Refactor zsh hooks to use consistent shebang and coding style

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,7 @@
   "shellformat.useEditorConfig": true,
   "editor.defaultFormatter": "Shunqian.prettier-plus",
   "workbench.productIconTheme": "fluent-icons",
-  "workbench.colorTheme": "SynthWave '84",
+  "workbench.colorTheme": "Dracula Soft",
   "workbench.iconTheme": "material-icon-theme",
   "workbench.preferredDarkColorTheme": "Andromeda Colorizer",
   "synthwave84.brightness": 0.6,
