ironing out the plugins, hooks, and functions

--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -5,7 +5,7 @@
 # ~ Tmux User Config ~
 
 # Specify custom path for .tmux config folder
-set -g @dotfiles-path "${CONFIGS}"
+set -g @dotfiles-path "${HOME}/.dotfiles/configs/tmux"
 
 # Set default shell
 set -g default-shell /bin/zsh
@@ -24,10 +24,10 @@ setw -g mode-keys vi
 
 # Unbind and rebound
 unbind r
-bind r source-file ${CONFIGS}/tmux.conf
+bind r source-file "${HOME}/.dotfiles/configs/tmux/tmux.conf"
 
 # Reload config
-bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+bind-key R source-file "${HOME}/.dotfiles/configs/tmux/tmux.conf" \; display-message "tmux.conf reloaded."
 
 # use vim-like keys for splits and windows
 bind-key v split-window -h -c "#{pane_current_path}"
@@ -46,7 +46,7 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 # Initialize TMUX plugin manager
-run -b "${LOCAL_DATA}/tmux/plugins/tpm/tpm"
+run '/opt/homebrew/opt/tpm/share/tpm/tpm'
 
 # List of plugins to install
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -57,3 +57,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'junegunn/tmux-fzf-maccy'
+set -g @plugin 'junegunn/tmux-fzf-url'
+
+set -g @fzf-maccy-bind '@'
+set -g @fzf-maccy-layout '-p70%
