Refactor .gitignore to ignore zsh history and session files

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,12 @@
-../configs/zsh/.zcompdump
-../.DS_Store
-../configs/zsh/.zsh_history
-configs/zsh/.zcompdump
-configs/zsh/.zsh_history
-configs/zsh/.zsh_history
+**/.zcompdump
+**/.DS_Store
+**/.zsh_history
+*/.zcompdump
+*/.zsh_history
 .gitignore
 .zcompdump
 .zsh_history
 .zcompdum*
 **/.zcompdump
-.vscode
-configs/zsh/.zsh_sessions
-configs/zsh/.zsh_sessions/037B4262-8135-4B38-BEEB-9FEEB9819F5E.session
-configs/zsh/.zsh_sessions/_expiration_check_timestamp
-.vscode/settings.json
+.vscode*
+**/.zsh_session*
