--- a/.github/workflows/sorbet.yml
+++ b/.github/workflows/sorbet.yml
@@ -18,6 +18,10 @@ on:
 permissions:
   contents: read
 
+defaults:
+  run:
+    shell: bash -xeuo pipefail {0}
+
 jobs:
   tapioca:
     if: github.repository == 'Homebrew/brew'
