sponsors-maintainers-man-completions: fix unbound variable
https://github.com/Homebrew/brew/actions/runs/11012718453/job/30579518221#step:6:106

--- a/.github/workflows/sponsors-maintainers-man-completions.yml
+++ b/.github/workflows/sponsors-maintainers-man-completions.yml
@@ -108,7 +108,7 @@ jobs:
             COMMITTED=true
           fi
 
-          if [[ -n "$COMMITTED" ]]
+          if [[ -n "${COMMITTED-}" ]]
           then
             echo "committed=true" >> "$GITHUB_OUTPUT"
             PULL_REQUEST_STATE="$(gh pr view --json=state | jq -r ".state")"
