workflows/tests: run tap syntax job on `macos-14`
Unlike the Ubuntu images [^1], `macos-14` has both core and cask
tapped [^2] so setting up Homebrew should be faster there.

[^1]: https://github.com/actions/runner-images/blob/ubuntu24/20240922.1/images/ubuntu/scripts/build/install-homebrew.sh
[^2]: https://github.com/actions/runner-images/blob/macos-14/20240923.101/images/macos/scripts/build/install-homebrew.sh#L23-L24

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -81,7 +81,7 @@ jobs:
     name: tap syntax
     needs: syntax
     if: github.repository_owner == 'Homebrew'
-    runs-on: ubuntu-22.04
+    runs-on: macos-14
     steps:
       - name: Set up Homebrew
         id: set-up-homebrew
