workflows/docker: publish `homebrew/brew:master`
When we don't care about which specific Ubuntu version to use,
`homebrew/brew:master` is better than `homebrew/ubuntu22.04:master` as
it allows us to implicitly rely on the default Ubuntu version.

See discussion at #18395.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -79,7 +79,9 @@ jobs:
                   "${GITHUB_REF}" == "refs/heads/master" &&
                   "${{ matrix.version }}" == "22.04" ]]; then
             tags+=(
+              "ghcr.io/homebrew/brew:master"
               "ghcr.io/homebrew/ubuntu${{ matrix.version }}:master"
+              "homebrew/brew:master"
               "homebrew/ubuntu${{matrix.version}}:master"
             )
           fi
