workflows/tests: only run RSpec tests with core tap on macOS
It's expensive to tap `homebrew/core` on GitHub-hosted Ubuntu runners,
and using the container requires tricks to make Codecov work. So, we
rely on macOS to provide coverage for the needs_homebrew_core RSpec
tests.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -274,7 +274,10 @@ jobs:
         id: set-up-homebrew
         uses: Homebrew/actions/setup-homebrew@master
         with:
-          core: true
+          # We only test needs_homebrew_core tests on macOS because
+          # homebrew/core is not available by default on GitHub-hosted Ubuntu
+          # runners, and it's expensive to tap it.
+          core: ${{ runner.os == 'macOS' }}
           cask: false
           test-bot: false
 
