github/workflows: use macos-15 GitHub Actions runners.
- Let's use this instead of macOS 14/latest when possible.
- Keep around macOS 13 to ensure we're still testing x86_64.

--- a/.github/workflows/pkg-installer.yml
+++ b/.github/workflows/pkg-installer.yml
@@ -23,7 +23,7 @@ defaults:
 jobs:
   build:
     if: github.repository_owner == 'Homebrew' && github.actor != 'dependabot[bot]'
-    runs-on: macos-latest
+    runs-on: macos-15
     outputs:
       installer_path: "Homebrew-${{ steps.homebrew-version.outputs.version }}.pkg"
     env:
@@ -143,6 +143,8 @@ jobs:
           # Apple Silicon
           - runner: macos-14
             name: macos-14-arm64
+          - runner: macos-15
+            name: macos-15-arm64
     steps:
       - name: Download installer from GitHub Actions
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4
@@ -188,7 +190,7 @@ jobs:
 
   upload:
     needs: [build, test]
-    runs-on: macos-latest
+    runs-on: macos-15
     permissions:
       # To write assets to GitHub release
       contents: write
