switched over to zinit loaded brew

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -59,6 +59,8 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'junegunn/tmux-fzf-maccy'
 set -g @plugin 'junegunn/tmux-fzf-url'
-
 set -g @fzf-maccy-bind '@'
-set -g @fzf-maccy-layout '-p70%
+set -g @fzf-maccy-layout '-p70%'
+
+# Bind fzf-url to u
+set -g @fzf-url-bind 'u'
