--- a/.github/workflows/rubydoc.yml
+++ b/.github/workflows/rubydoc.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           repository: Homebrew/rubydoc.brew.sh
           path: rubydoc
+          persist-credentials: false
 
       - name: Install Ruby
         uses: ruby/setup-ruby@7bae1d00b5db9166f4f0fc47985a3a5702cb58f0 # v1.197.0
