ci: move to ubuntu latest
Add coverage test using ubuntu 24.04

Not changing the default build CI version for core yet.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,7 +21,7 @@ jobs:
   ubuntu:
     if: github.repository_owner == 'Homebrew'
     name: docker (Ubuntu ${{ matrix.version }})
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
