--- a/.github/workflows/sponsors-maintainers-man-completions.yml
+++ b/.github/workflows/sponsors-maintainers-man-completions.yml
@@ -27,7 +27,7 @@ defaults:
 
 jobs:
   updates:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     if: github.repository == 'Homebrew/brew'
     steps:
       - name: Setup Homebrew
