--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -225,7 +225,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - name: update-test (Ubuntu Latest)
+          - name: update-test (Ubuntu)
             runs-on: ubuntu-latest
           - name: update-test (macOS)
             runs-on: macos-15
