--- a/config/git/config
+++ b/config/git/config
@@ -42,14 +42,27 @@
 	newHighlight = green bold 22
 
 [color "diff"]
-	meta = yellow
+	meta = 11
 	frag = magenta bold
 	commit = yellow bold
 	old = red bold
 	new = green bold
 	whitespace = red reverse
+  git config --global color.diff-highlight.oldNormal    "red bold"
+git config --global color.diff-highlight.oldHighlight "red bold 52"
+git config --global color.diff-highlight.newNormal    "green bold"
+git config --global color.diff-highlight.newHighlight "green bold 22"
+
+git config --global color.diff.meta       "11"
+git config --global color.diff.frag       "magenta bold"
+git config --global color.diff.func       "146 bold"
+git config --global color.diff.commit     "yellow bold"
+git config --global color.diff.old        "red bold"
+git config --global color.diff.new        "green bold"
+git config --global color.diff.whitespace "red reverse"
 
 [core]
+  pager = "diff-so-fancy | less --tabs=4 -RFX"
   editor = nvim
   whitespace = trailing-space,space-before-tab
   excludesfile = ~/.gitignore
@@ -72,7 +85,6 @@
 
 [help]
   autocorrect = 1
-
 
 [merge]
   tool = meld
@@ -104,3 +116,5 @@
   browser = safari
 
 
+[interactive]
+	diffFilter = diff-so-fancy --patch
