--- a/config/git/config
+++ b/config/git/config
@@ -36,30 +36,19 @@
 	ui = true
 
 [color "diff-highlight"]
-	oldNormal = red bold
+	oldNormal    = red bold
 	oldHighlight = red bold 52
-	newNormal = green bold
+	newNormal    = green bold
 	newHighlight = green bold 22
 
 [color "diff"]
-	meta = 11
-	frag = magenta bold
-	commit = yellow bold
-	old = red bold
-	new = green bold
+	old        = red bold
+	new        = green bold
+	func       = 146 bold
+	meta 	   = 11
+	frag 	   = magenta bold
+	commit     = yellow bold
 	whitespace = red reverse
-  git config --global color.diff-highlight.oldNormal    "red bold"
-git config --global color.diff-highlight.oldHighlight "red bold 52"
-git config --global color.diff-highlight.newNormal    "green bold"
-git config --global color.diff-highlight.newHighlight "green bold 22"
-
-git config --global color.diff.meta       "11"
-git config --global color.diff.frag       "magenta bold"
-git config --global color.diff.func       "146 bold"
-git config --global color.diff.commit     "yellow bold"
-git config --global color.diff.old        "red bold"
-git config --global color.diff.new        "green bold"
-git config --global color.diff.whitespace "red reverse"
 
 [core]
   pager = "diff-so-fancy | less --tabs=4 -RFX"
