Upload test results to CodeCov
CodeCov now supports uploading test results which allows e.g. flaky test
detection and may allow us to remove BuildPulse.

Co-authored-by: Bo Anderson <mail@boanderson.me>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -356,6 +356,20 @@ jobs:
           HOMEBREW_BUILDPULSE_ACCOUNT_ID: 1503512
           HOMEBREW_BUILDPULSE_REPOSITORY_ID: 53238813
 
+      - id: junit_xml
+        working-directory: ${{ steps.set-up-homebrew.outputs.repository-path }}
+        run: |
+          mkdir -p test/junit
+          filenames=$(find test/junit -name 'rspec*.xml' -print | tr '\n' ',')
+          echo "filenames=${filenames%,}" >> "$GITHUB_OUTPUT"
+
+      - uses: codecov/test-results-action@9739113ad922ea0a9abb4b2c0f8bf6a4aa8ef820 # v1.0.1
+        with:
+          working-directory: ${{ steps.set-up-homebrew.outputs.repository-path }}
+          files: ${{ steps.junit_xml.outputs.filenames }}
+          disable_search: true
+          token: ${{ secrets.CODECOV_TOKEN }}
+
       - uses: codecov/codecov-action@015f24e6818733317a2da2edd6290ab26238649a # v5.0.7
         with:
           working-directory: ${{ steps.set-up-homebrew.outputs.repository-path }}
