--- a/config/homebrew/Brewfile
+++ b/config/homebrew/Brewfile
@@ -1,37 +1,30 @@
-brew "ack"
-brew "ansible"
-brew "ansible-lint"
-brew "bat"
-brew "bind"
-brew "coreutils"
-brew "curl"
-brew "exa"
-brew "fd"
-brew "fortune"
-brew "git"
-brew "go"
-brew "howdoi"
-brew "htop"
-brew "hub"
-brew "jq"
-brew "jsonlint"
-brew "lua"
-brew "molecule"
-brew "neovim"
-brew "nmap"
-brew "rename"
-brew "ripgrep"
-brew "shellcheck"
-brew "shfmt"
-brew "terraform"
-brew "tflint"
-brew "the_platinum_searcher"
-brew "tmux"
-brew "tre-command"
-brew "tree"
-brew "wget"
-brew "yamllint"
-brew "zip"
-brew "zsh"
-tap "homebrew/bundle"
-tap "homebrew/core"
+brew "brew-cask-completion"
+brew 'coreutils'
+brew 'jq'
+brew 'xz'
+brew 'hg'
+brew 'fzf'
+brew 'lsd'
+brew 'lua'
+brew 'gawk'
+brew 'grep'
+brew 'gsed'
+brew 'wget'
+brew 'curl'
+brew 'tmux'
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
