dependabot: Group Sorbet updates together
- A PR every day for each of `sorbet`, `sorbet-runtime`
  and `sorbet-static-and-runtime` is a bit much.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,6 +21,10 @@ updates:
       interval: daily
     allow:
       - dependency-type: all
+    groups:
+      sorbet:
+        patterns:
+          - "sorbet*"
 
   - package-ecosystem: npm
     directory: /
