removed leftover files/folder

--- a/config/homebrew/brew.conf
+++ b/config/homebrew/brew.conf
@@ -9,4 +9,10 @@ export HOMEBREW_CACHE="$XDG_CACHE_HOME/homebrew" && mkdir -p "$HOMEBREW_CACHE"
 export HOMEBREW_CASK_OPTS="--appdir=$HOME/Applications --fontdir=/Library/Fonts "
 export HOMEBREW_BAT_CONFIG_PATH="$XDG_CONFIG_HOME/bat/bat.conf"
 export HOMEBREW_CLEANUP_PERIODIC_FULL_DAYS=30
-export HOMEBREW_CLEANUP_PERIODIC_OUTDATED=true
+export HOMEBREW_CLEANUP_PERIODIC_OUTDATED=trueexport HOMEBREW_PREFIX="/Users/akuttor/.local/share/zinit/plugins/brew";
+export HOMEBREW_CELLAR="/Users/akuttor/.local/share/zinit/plugins/brew/Cellar";
+export HOMEBREW_REPOSITORY="/Users/akuttor/.local/share/zinit/plugins/brew";
+fpath[1,0]="/Users/akuttor/.local/share/zinit/plugins/brew/share/zsh/site-functions";
+export PATH="/Users/akuttor/.local/share/zinit/plugins/brew/bin:/Users/akuttor/.local/share/zinit/plugins/brew/sbin${PATH+:$PATH}";
+[ -z "${MANPATH-}" ] || export MANPATH=":${MANPATH#:}";
+export INFOPATH="/Users/akuttor/.local/share/zinit/plugins/brew/share/info:${INFOPATH:-}";
